--- a/.gitignore
+++ b/.gitignore
@@ -220,5 +220,8 @@ $RECYCLE.BIN/
 
 without_assessment.jsonl
 
+# Ignore data directory
+data/
+
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,python
